@@ -510,3 +510,6 @@
 20150517 tape2wav.c: abs() takes an int so use atoi() to match types (Fred).
 20150527 compat.h,compat/{amiga/{basename.c,osname.c},unix/{basename.c,
          osname.c},win32/osname.c}: add missing includes (Stuart).
+20150527 createhdf.c,fmfconv.c,fmfconv_aiff.c,fmfconv_au.c,fmfconv_avi.c,
+         fmfconv_ff.c,fmfconv_jpg.c,fmfconv_wav.c,fmfconv_yuv.c,raw2hdf.c,
+         snap2tzx.c: add static to functions where appropriate (Stuart).
